testsuite/positive/loop.n
class M
  {
    static g () : void { M.f () }
    static f () : void { M.g () }
  }
