testsuite/negative/cyclic-type.n

public class C
{
   public static Main () : void
   {
     def f (x) { x (x) }
     f (3) // E: in argument #1 \(x\), needed
   }
}
